--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark justify-content-between pt-3 pb-3 mb-5">
@@ -151,7 +150,8 @@
             
         </div>
     </div> 
-
+    <button id="previous" onclick="getPrevious(currentItemIndex, myItemObjectArray)">Previous</button>
+    <button id="next" onclick="getNext(currentItemIndex, myItemObjectArray)">Next</button>
 
 
 
