added new navbar

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             
         </div>
     </div> 
-    <button id="previous" onclick="getPrevious(currentItemIndex, myItemObjectArray)">Previous</button>
-    <button id="next" onclick="getNext(currentItemIndex, myItemObjectArray)">Next</button>
 
 
+    <button  class="btn">Previous</button>
+    <button class="btn">Next</button>
 
 
     <script src="main.js"></script>
