--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     </div> 
 
 
-    <button  class="btn">Previous</button>
-    <button class="btn">Next</button>
+    <button  class="btn btn-primary" onclick="button()">Previous</button>
+    <button class="btn btn-primary">Next</button>
 
 
     <script src="main.js"></script>
